Fix icon spacing in top nav

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -55,10 +55,6 @@ nav.top-nav {
     display: inline-block;
   }
 
-  .todolist-actions > * {
-    padding-right: 0.5em;
-  }
-
   .flash-messages {
     z-index: 2;
   }
